[package]
name = "rust_kv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rouille = "3.6"
r2d2 = "0.8"
bincode = "1.3"
crc32fast = "1.3"
snap = "1.1"
